assets/css/styles.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap');

/* CSS Variables */
:root {
    --primary-font: "Quicksand";
    --secondary-font: "Nunito";
    --primary-color: #6A5ACD; /* Purple */
    --secondary-color: #2a2a2a; /* Black */
    --accent-color: #FF6F61; /* Coral */
    --background-color: #F2F2F2; /* Mist Grey */
    --button-color: #2ECC71; /* Emerald Green */
}

/* Global styles */

body {
    font-family: var(--secondary-font);
    color: var(--secondary-color);
}

h1 {
    font-family: var(--primary-font);
    color: var(--primary-color);
}

h2,
h3 {
    font-family: var(--secondary-font);
    color: var(--secondary-color);
}

h2 {
    margin-top: 1rem;
    margin-bottom: 1rem;
}

main {
    margin: auto;
}

.section {
    padding-top: 4rem; /* prevent navbar overlap */
}

.my-btn {
    background-color: var(--accent-color);
    border-color: var(--accent-color);
    border-radius: 0;
    margin: 0px 20px 20px 0px;
}

.main-img {
    border-radius: 0;
}

/* Header */

/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: var(--primary-color);
    height: 75px;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}


/* Hero section */

#hero {
    background: url(../images/safeguarding_child.DPSwCwj6_1Ay5nF.webp) no-repeat center center/cover;
    height: 400px;
    width: 100%;
    position: relative;
}

#hero-text {
    position: absolute;
    left: 30px;
    bottom: 30px;
    width: 60%;
    background-color: rgba(195, 190, 190, 0.9);
}

/* Main content */

/* About section */

#about {
    margin: auto;
    max-width: 90%;
}

/* Signs */

#signs {
    max-width: 90%;
}

.sub-heading {
    font-family: var(--secondary-font);
    color: var(--secondary-color);
}

/* Take Action */

#action {
    text-align: center;
    max-width: 90%;
}

/* Footer */

#contact {
    text-align: center;
    max-width: 90%;
}

/* Media query: large or landscape phones (576px and up) */

/* Media query: tablets and larger (768px and up) */

/* Large devices (laptops and desktops, 992px and up) */

